--- a/app/src/main/res/drawable/separator.xml
+++ b/app/src/main/res/drawable/separator.xml
@@ -1,6 +1,6 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="13dp"
-    android:height="13dp"
+    android:width="@dimen/padding_top"
+    android:height="@dimen/padding_top"
     android:viewportWidth="13"
     android:viewportHeight="13">
   <path
