--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -44,6 +44,8 @@
         <item name="iconPadding">@dimen/top_switch</item>
         <item name="cornerRadius">@dimen/width_text</item>
         <item name="android:fontFamily">@font/ys_display_medium</item>
+        <item name="android:insetBottom">@dimen/layout_zero</item>
+        <item name="android:insetTop">@dimen/layout_zero</item>
     </style>
     <style name="BackGround">
         <item name="android:layout_width">match_parent</item>
@@ -173,5 +175,11 @@
         <item name="android:textSize">@dimen/text_problem</item>
         <item name="android:textColor">@color/white</item>
     </style>
-
+    <style name="textHistory">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:text">@string/you</item>
+        <item name="android:textSize">@dimen/text_problem</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
 </resources>
