--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -158,7 +158,7 @@
     <style name="problemLeft">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="srcCompat">@drawable/noteright</item>
+        <item name="srcCompat">@drawable/note_right</item>
     </style>
     <style name="textProblem">
         <item name="android:layout_width">@dimen/problem_width</item>
@@ -180,5 +180,61 @@
         <item name="android:text">@string/you</item>
         <item name="android:textSize">@dimen/text_problem</item>
         <item name="android:textColor">@color/black_blue</item>
+    </style>
+    <style name="buttonPlay">
+        <item name="android:layout_width">@dimen/play_button</item>
+        <item name="android:layout_height">@dimen/play_button</item>
+        <item name="android:letterSpacing">-0.05</item>
+        <item name="android:backgroundTint">@color/white</item>
+        <item name="iconPadding">@dimen/top_switch</item>
+        <item name="cornerRadius">@dimen/width_text</item>
+        <item name="android:insetBottom">@dimen/layout_zero</item>
+        <item name="android:insetTop">@dimen/layout_zero</item>
+        <item name="srcCompat">@drawable/play_button</item>
+    </style>
+    <style name="buttonAdd">
+        <item name="android:layout_width">@dimen/play_add</item>
+        <item name="android:layout_height">@dimen/play_add</item>
+        <item name="android:letterSpacing">-0.05</item>
+        <item name="android:backgroundTint">@color/white</item>
+        <item name="iconPadding">@dimen/top_switch</item>
+        <item name="cornerRadius">@dimen/width_text</item>
+        <item name="android:insetBottom">@dimen/layout_zero</item>
+        <item name="android:insetTop">@dimen/layout_zero</item>
+        <item name="srcCompat">@drawable/add_button</item>
+    </style>
+    <style name="buttonLike">
+        <item name="android:layout_width">@dimen/play_add</item>
+        <item name="android:layout_height">@dimen/play_add</item>
+        <item name="android:letterSpacing">-0.05</item>
+        <item name="android:backgroundTint">@color/white</item>
+        <item name="iconPadding">@dimen/top_switch</item>
+        <item name="cornerRadius">@dimen/width_text</item>
+        <item name="android:insetBottom">@dimen/layout_zero</item>
+        <item name="android:insetTop">@dimen/layout_zero</item>
+        <item name="srcCompat">@drawable/like_button</item>
+    </style>
+    <style name="textLong">
+        <item name="android:layout_width">@dimen/play_long</item>
+        <item name="android:layout_height">@dimen/corner_radius</item>
+        <item name="android:textSize">@dimen/text_play</item>
+    </style>
+    <style name="textTime">
+        <item name="android:layout_width">@dimen/play_time</item>
+        <item name="android:layout_height">@dimen/corner_radius</item>
+        <item name="android:textColor">@color/black_blue</item>
+        <item name="android:textSize">@dimen/text_play</item>
+    </style>
+    <style name="textName">
+        <item name="android:layout_width">@dimen/layout_zero</item>
+        <item name="android:layout_height">@dimen/play_name</item>
+        <item name="android:textColor">@color/black_blue</item>
+        <item name="android:textSize">@dimen/text_size</item>
+    </style>
+    <style name="textBand">
+        <item name="android:layout_width">@dimen/layout_zero</item>
+        <item name="android:layout_height">@dimen/margin_size</item>
+        <item name="android:textColor">@color/black_blue</item>
+        <item name="android:textSize">@dimen/text_button</item>
     </style>
 </resources>
